<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyTire</string>
    <string name="cifrao_moeda">R$</string>
    <string name="preco">Preço</string>
    <string name="cancelar">CANCELAR</string>
    <string name="salvar">Salvar</string>
    <string name="nova_entrada">Nova entrada</string>
    <string name="placa">Placa</string>
    <string name="moto">Moto</string>
    <string name="proximo">Próximo</string>
    <string name="servicos">Serviços</string>
    <string name="registrar">Registrar</string>
    <string name="exemplo_nome_serviço">Troca de Pneu</string>
    <string name="exemplo_preço_serviço">R$ 20,00</string>
    <string name="funcionario">Funcionário</string>
    <string name="gerente">Gerente</string>
    <string name="resumo_entrada">Resumo entrada</string>
    <string name="placa_">Placa:</string>
    <string name="placa_placeholder">PHL4F06</string>
    <string name="categoria_">Categoria:</string>
    <string name="categoria_placeholder">Carro pequeno</string>
    <string name="telefone_">Telefone:</string>
    <string name="telefone_placeholder">(92) 99452–3690</string>
    <string name="data_">Data:</string>
    <string name="data_placeholder">26/09/2021</string>
    <string name="horario_entrada_">Horário de entrada:</string>
    <string name="horario_entrada_placeholder">15h10</string>
    <string name="total_">Total:</string>
    <string name="total_placeholder">R$60,00</string>
    <string name="delete_desc_alt">
        Ícone de X para o botão de excluir um serviço do atendimento.
    </string>
    <string name="saida_desc">Botão de acesso ao lista de atendimentos pendentes para pagamento</string>
    <string name="entrada">Botão de acesso ao cadastro de um novo atendimento</string>
    <string name="home">Início</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="loginCad">FAÇA O LOGIN</string>
    <string name="nome_estabelecimento_login">Entrar como Borracharia do Zezinho</string>
    <string name="introducao">Descubra um mundo de possibilidades para o seu negócio</string>
    <string name="boas_vindas">Bem-Vindo ao MyTire</string>
    <string name="ic_pneu">Icone da Aplicação</string>
    <string name="pergunta_login">Já possui conta?</string>
    <string name="verifica_conta">Já tem uma conta?</string>
    <string name="fazer_login">
        <b><u>FAÇA SEU LOGIN</u></b>
    </string>
    <string name="title_cadastro">Cadastro</string>
    <string name="passo_um">PASSO 1 DE 2</string>
    <string name="insira_dados_cadastro">Insira seus dados de cadastro:</string>
    <string name="nome_estabelecimento">Nome do Estabelecimento</string>
    <string name="cnpj">CNPJ</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="opcional">Opcional</string>
    <string name="avancar">AVANÇAR</string>
    <string name="MASK_CNPJ">[00].[000].[000]/[0000]-[00]</string>
    <string name="erro_cnpj_ja_cadastrado">CNPJ já cadastrado.</string>
    <string name="passo_dois">PASSO 2 DE 2</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="visualizar_colaborador">Visualizar Colaborador</string>
    <string name="dados_cadastrados">Dados cadastrados</string>
    <string name="cargo">Cargo</string>
    <string name="gerenciar_colaboradores">Gerenciar Colaboradores</string>
    <string name="pin">PIN</string>
    <string name="usuario_nome">Nome</string>
    <string name="usuario_sobrenome">Sobrenome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="concluir">CONCLUIR</string>
    <string name="extra_nome_estabelecimento">EXTRA_NOME_ESTABELECIMENTO</string>
    <string name="extra_cnpj">EXTRA_CNPJ</string>
    <string name="extra_telefone">EXTRA_TELEFONE</string>
    <string name="extra_endereco">EXTRA_ENDERECO</string>
    <string name="EXTRA_ESTABELECIMENTO">EXTRA_ESTABELECIMENTO</string>
    <string name="EXTRA_USUARIO">EXTRA_USUARIO</string>
    <string name="ALTERANDO_DADOS_GERENTE">ALTERANDO_DADOS_GERENTE</string>
    <string name="EXTRA_ALTERANDO_PIN">EXTRA_ALTERANDO_PIN</string>
    <string name="EXTRA_PRIMEIRO_USO">EXTRA_PRIMEIRO_USO</string>
    <string name="erro_email_ja_em_uso_tente_outro">Este email já está em uso. Tente outro.</string>
    <string name="erro_nome_ja_em_uso">Este nome já está em uso.</string>
    <string name="EXTRA_ERRO_CADASTRO">EXTRA_ERRO_CADASTRO</string>
    <string name="erro_firebase_insira_email_valido">The email address is badly formatted.</string>
    <string name="erro_firebase_email_ja_em_uso_tente_outro">The email address is already in use by another account.</string>
    <string name="description_ic_load">Imagem de uma roda de carregamento parada. Em tempo de execução, é substituída por uma animação própria da roda girando para informar o carregamento do processo.</string>
    <string name="por_favor_aguarde" tools:ignore="TypographyEllipsis">Por favor aguarde...</string>
    <string name="estamos_salvando_dados_nuvem">Estamos salvando seus dados na nuvem</string>
    <string name="confirmar_que_e_voce">Para confirmar que é você insira seu PIN atual:</string>
    <string name="pin_atual">PIN atual</string>
    <string name="confirme_seu_pin_atual">Confirme seu PIN atual</string>
    <string name="estamos_gerando_pin">Estamos gerando o seu PIN, lembre-se de memorizá-lo!</string>
    <string name="gerar_pin_colbaorador">Para que o novo colaborador acesse sua conta será necessário uma senha de 4 dígitos (PIN). Não se preocupe, iremos cuidar disso para você. Anotar a senha que será gerada, pois ela não aparecerá novamente.</string>
    <string name="ERRO_CADASTRO_TIMEOUT">5s timeout.</string>
    <string name="description_sinal_de_visto_cadastro_do_estabelecimento">Sinal de visto nas cores do app. Nesse caso, representa a conclusão do cadastro do estabelecimento.</string>
    <string name="cadastro_concluido_com_sucesso">Cadastro concluído com sucesso!</string>
    <string name="dados_atualizados_com_sucesso">Dados atualizados com sucesso!</string>
    <string name="seus_dados_foram_salvos_nuvem">Seus dados foram salvos na nuvem</string>
    <string name="description_ic_cancel">Um X em branco rodeado de um círculo azul.</string>
    <string name="btn_text_tentar_novamente"><u>TENTAR NOVAMENTE</u></string>
    <string name="verifique_conexao">Verifique a conexão da sua internet e tente novamente.</string>
    <string name="nao_foi_possivel_concluir_cadastro">Não foi possível concluir o cadastro!</string>
    <string name="erro_campo_obrigatorio">Campo obrigatório</string>
    <string name="erro_insira_cnpj_valido">Insira um CNPJ válido.</string>
    <string name="erro_telefone_invalido">Insira um telefone válido.</string>
    <string name="erro_insira_email_valido">Insira um endereço de email válido.</string>
    <string name="erro_senha_6_ou_mais_caracteres">Insira uma senha com 6 ou mais caracteres.</string>
    <string name="erro_pin_4_ou_mais_caracteres">Insira um Pin com 4 caracteres.</string>
    <string name="erro_senhas_incompativeis">Senhas incompatíveis</string>
    <string name="erro_pins_incompativeis">PINs incompatíveis</string>
    <string name="saida">Saída</string>
    <string name="lista_atendimentos_em_aberto">Lista de atendimentos em aberto:</string>
    <string name="exemplo_placa">PHJ-4123</string>
    <string name="resumo_saida">Resumo saída</string>
    <string name="pagar_agora">Pagar agora</string>
    <string name="reimprimir">Reimprimir</string>
    <string name="formas_pagamento">Formas de pagamento</string>
    <string name="cartao_de_credito">CARTÃO DE CRÉDITO</string>
    <string name="cartao_de_debito">CARTÃO DE DÉBITO</string>
    <string name="dinheiro">DINHEIRO</string>
    <string name="valor">VALOR</string>
    <string name="valor_example">R$ 60,00</string>
    <string name="placa_example">PHL4F06</string>
    <string name="concluir_pagamento">CONCLUIR PAGAMENTO</string>
    <string name="titulo_pagamento_dinheiro">Dinheiro</string>
    <string name="text_placa">Placa</string>
    <string name="text_hora_entrada">Horário de Entrada</string>
    <string name="text_hora_saida">Horário de Saída</string>
    <string name="text_total">Total</string>
    <string name="text_value_hora_entrada">13:15</string>
    <string name="text_value_hora_saida">13:45</string>
    <string name="text_value_total">R$ 60,00</string>
    <string name="valor_recebido">Valor recebido</string>
    <string name="troco">Troco</string>
    <string name="tabela_de_servicos_maiusculo">TABELA DE SERVIÇOS</string>
    <string name="pagamento_efetuado">PAGAMENTO EFETUADO</string>
    <string name="check_desc">Símbolo de check. Confirma o sucesso do pagamento para o usuário.</string>
    <string name="total_parcial">Total Parcial</string>
    <string name="pagamentos_em_dinheiro">Pagamentos em Dinheiro</string>
    <string name="pagamentos_no_cartao">Pagamentos no Cartão</string>
    <string name="pagamentos_receber">Pagamentos à Receber</string>
    <string name="saldo">Saldo em Caixa</string>
    <string name="ajustes">Ajustes</string>
    <string name="ajustes_maiusculo">AJUSTES</string>
    <string name="caixa">Caixa</string>
    <string name="historico">Histórico</string>
    <string name="divisor">Design separador de tabela e total</string>
    <string name="pesquisar">Procurar</string>
    <string name="data">Data</string>
    <string name="botao_de_resumo">Leva para o resumo do atendimento</string>
    <string name="editar_servicos">Editar Serviço</string>
    <string name="tabela_servicos">Tabela de Serviços</string>
    <string name="servico">Serviço</string>
    <string name="cadServico_txtOrientacaoServico">Insira os dados do novo serviço:</string>
    <string name="cadastrar_servico">Cadastro de Serviço</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="detalhes">Detalhes do Serviço</string>
    <string name="delete_button_service">Botão que deleta o serviço da lista de serviços</string>
    <string name="formato_data">dd/MM/yyyy HH:mm</string>
    <string name="valor_">Valor</string>
    <string name="cnpj_dois_pontos">CNPJ:</string>
    <string name="EXTRA_VEICULO_ID">VEICULO_ID</string>
    <string name="PREF_USER_DATA">USER</string>
    <string name="PREF_USER_LOGADO">USER_LOGADO</string>
    <string name="CNPJ_ESTABELECIMENTO">CNPJ_ESTABELECIMENTO</string>
    <string name="PREF_USER_USUARIO_EMAIL">USER_ESTABELECIMENTO_EMAIL</string>
    <string name="imprimir">Imprimir</string>
    <string name="resposta_pagamento">Ao completar um agendamento, após escrever os dados e escolher um serviço/produto, você vai até agenda, escolhe uma forma de pagamento e passa o cartão, paga em dinheiro ou pix.</string>
    <string name="pergunta_agendamento">Posso excluir um serviço que agendei?</string>
    <string name="resposta_agendamento">Sim, ao entrar na agenda você pode verificar os agendamentos, clicar em um e no canto superior direito há um botão que da a opção de editar ou excluir esse agendamento.</string>
    <string name="pergunta_email">Como cadastro um novo email?</string>
    <string name="resposta_email">Ao sair da sessão, na página inicial você secadastra novamente com um novo email.</string>
    <string name="pergunta_controle">Como tenho controle do saldo em caixa?</string>
    <string name="resposta_controle">Em finanças, você encontra o seu saldo no mês atual e também há como visualizar saldo de outros meses ao escolher um mês e gerar relatório.</string>
    <string name="pergunta_formasdepagamento">Quais são as formas de pagamento aceitas?</string>
    <string name="resposta_formasdepagamento">Cartão de Crédito e Débito, pagamentos por meio de dinheiro e Pix também.</string>
    <string name="pergunta_pagamento">Como faço um pagamento pelo app?</string>
</resources>