<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ajustes.AjudaActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemPergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pergunta_pagamento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#DD000000"
            android:fontFamily="sans-serif"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemResposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resposta_pagamento"
            android:textSize="14sp"
            android:textColor="#99000000"
            android:fontFamily="sans-serif"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pergunta_agendamento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#DD000000"
            android:fontFamily="sans-serif"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resposta_agendamento"
            android:textSize="14sp"
            android:textColor="#99000000"
            android:fontFamily="sans-serif"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pergunta_email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#DD000000"
            android:fontFamily="sans-serif"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resposta_email"
            android:textSize="14sp"
            android:textColor="#99000000"
            android:fontFamily="sans-serif"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pergunta_controle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#DD000000"
            android:fontFamily="sans-serif"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resposta_controle"
            android:textSize="14sp"
            android:textColor="#99000000"
            android:fontFamily="sans-serif"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pergunta_formasdepagamento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#DD000000"
            android:fontFamily="sans-serif"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resposta_formasdepagamento"
            android:textSize="14sp"
            android:textColor="#99000000"
            android:fontFamily="sans-serif"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/listDivider" />

        <RadioGroup
            android:id="@+id/radioGroupTipoServicoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/allerta"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="Ainda com dúvidas?"/>

            <TextView
                android:id="@+id/txtAjuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/allerta"
                android:text="Fale conosco!"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>